<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="login_title">Вход</string>

    <string name="login_email_label">Email</string>
    <string name="login_password_label">Пароль</string>

    <string name="login_email_hint">example@gmail.com</string>
    <string name="login_password_hint">Введите пароль</string>

    <string name="login_button_text">Вход</string>

    <string name="login_action_no_account">Нет аккаунта?</string>
    <string name="login_action_register">Регистрация</string>
    <string name="login_action_forgot_password">Забыл пароль</string>

    <string name="home_search_hint">Search courses...</string>
    <string name="home_filter_icon_desc">Кнопка фильтрации курсов</string>
    <string name="home_sort_by_date">По дате добавления</string>
    <string name="home_sort_icon_desc">Изменить порядок сортировки</string>

    <string name="course_title_placeholder">Название курса</string>
    <string name="course_description_placeholder">
        Краткое описание курса в две строки максимум.
    </string>
    <string name="course_price_placeholder">990 ₽</string>
    <string name="course_rating_placeholder">4.9</string>
    <string name="course_publish_date_placeholder">22 Мая 2024</string>
    <string name="course_price_template">%1$d ₽</string>

    <string name="course_cover_content_desc">Обложка курса</string>
    <string name="course_bookmark_content_desc">Добавить курс в избранное</string>
    <string name="course_more_button">Подробнее ➜</string>

    <string name="bottom_nav_home">Главная</string>
    <string name="bottom_nav_favorites">Избранное</string>
    <string name="bottom_nav_account">Аккаунт</string>

    <string name="account_STUB">Аккаунт (заглушка)</string>

    <string name="favorites_favorites">Избранное</string>
    <string name="favorites_empty">В избранном пока нет курсов</string>
    <string name="error_courses_loading">Ошибка загрузки курсов</string>

</resources>
