<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/courses_background_dark"
    android:paddingStart="16dp"
    android:paddingTop="140dp"
    android:paddingEnd="16dp"
    android:paddingBottom="24dp">

    <TextView
        android:id="@+id/textTitle"
        style="@style/Text.Courses.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutInputs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle">

        <TextView
            android:id="@+id/labelEmail"
            style="@style/Text.Courses.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/login_email_label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            style="@style/Widget.Courses.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                style="@style/Widget.Courses.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/login_email_hint"
                android:paddingVertical="11dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <TextView
            android:id="@+id/labelPassword"
            style="@style/Text.Courses.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/login_password_label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            style="@style/Widget.Courses.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                style="@style/Widget.Courses.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/login_password_hint"
                android:paddingVertical="11dp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        style="@style/Widget.Courses.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/login_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutInputs" />

    <LinearLayout
        android:id="@+id/layoutActions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin">

        <LinearLayout
            android:id="@+id/layoutActionsTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textActionNoAccount"
                style="@style/Text.Courses.ActionWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_action_no_account" />

            <TextView
                android:id="@+id/textActionRegister"
                style="@style/Text.Courses.ActionGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/login_action_register" />
        </LinearLayout>

        <TextView
            android:id="@+id/textActionForgotPassword"
            style="@style/Text.Courses.ActionGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/login_action_forgot_password" />
    </LinearLayout>

    <View
        android:id="@+id/dividerSocial"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="@color/courses_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutActions" />

    <LinearLayout
        android:id="@+id/layoutSocial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerSocial">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonVk"
            style="@style/Widget.Courses.Button.Social.Vk"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text=""
            app:icon="@drawable/ic_vk"
            app:iconGravity="textStart"
            app:iconPadding="0dp" />

        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonOk"
            style="@style/Widget.Courses.Button.Social.Ok"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text=""
            app:icon="@drawable/ic_ok"
            app:iconGravity="textStart"
            app:iconPadding="0dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
